# bittensor

./: pyproject.toml
.circleci/: config.yml
bittensor/: __init__.py  axon.py  dendrite.py  keyfile.py  subtensor.py
bittensor/_dendrite/text_prompting/: dendrite.py
bittensor/_subtensor/: subtensor_impl.py
bittensor/commands/: overview.py
bittensor/extrinsics/: serving.py
bittensor/mock/: subtensor_mock.py
bittensor/utils/: __init__.py  networking.py  registration.py
contrib/: CONTRIBUTING.md
requirements/: cubit.txt  prod.txt
tests/unit_tests/: test_subtensor.py
tests/unit_tests/utils/: test_networking.py
