[tool.poetry]
name = "bittensor"
version = "6.0.0"
description = "Bittensor is a mining network, similar to Bitcoin, that includes built-in incentives designed to encourage computers to provide access to machine learning models in an efficient and censorship-resistant manner."
authors = ["Opentensor Foundation"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "3.8.5"
ansible = "6.7.0"
ansible-vault = "2.1.0"
backoff = "*"
black = "23.7.0"
cryptography = "41.0.3"
ddt = "1.6.0"
fuzzywuzzy = ">=0.18.0"
fastapi = "0.99.1"
loguru = "0.7.0"
munch = "2.5.0"
netaddr = "*"
numpy = "*"
msgpack = "*"
nest-asyncio = "*"
pycryptodome = ">=3.18.0,<4.0.0"
pyyaml = "*"
password-strength = "*"
pydantic = "!=1.8,!=1.8.1,<2.0.0,>=1.7.4"
PyNaCl = ">=1.3.0,<=1.5.0"
pytest-asyncio = "*"
python-Levenshtein = "*"
pytest = "*"
retry = "*"
requests = "*"
rich = "*"
scalecodec = "1.2.0"
substrate-interface = "1.5.0"
termcolor = "*"
torch = ">=1.13.1"
tqdm = "*"
uvicorn = "0.22.0"
wheel = "*"

# For git dependencies
msgpack-numpy = { git = "https://github.com/opentensor/msgpack-numpy.git", branch = "main" }

[tool.poetry.dev-dependencies]
pytest = "7.2.0"
pytest-split = "0.8.0"
pytest-xdist = "3.0.2"
pytest-rerunfailures = "10.2"
coveralls = "3.3.1"
pytest-cov = "4.0.0"
ddt = "1.6.0"
hypothesis = "6.81.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
